WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108069
INPUT_MULTIPLE_FIELDS_UI: The content should not overflow the <input> boundary
https://bugs.webkit.org/show_bug.cgi?id=108069
Summary
INPUT_MULTIPLE_FIELDS_UI: The content should not overflow the <input> boundary
Kent Tamura
Reported
2013-01-28 02:05:59 PST
Created
attachment 184958
[details]
screenshot
http://code.google.com/p/chromium/issues/detail?id=172029
If small width/height is specified to an <input>, its content overflows. See the attachment
Attachments
screenshot
(19.31 KB, image/png)
2013-01-28 02:05 PST
,
Kent Tamura
no flags
Details
WIP
(133.64 KB, patch)
2013-01-28 02:15 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
WIP 2
(134.20 KB, patch)
2013-01-28 17:03 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch
(138.70 KB, patch)
2013-01-29 01:38 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch 2
(138.84 KB, patch)
2013-01-29 02:36 PST
,
Kent Tamura
morrita
: review+
tkent
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2013-01-28 02:15:40 PST
Created
attachment 184960
[details]
WIP
Early Warning System Bot
Comment 2
2013-01-28 02:23:43 PST
Comment on
attachment 184960
[details]
WIP
Attachment 184960
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/16152549
Early Warning System Bot
Comment 3
2013-01-28 02:24:17 PST
Comment on
attachment 184960
[details]
WIP
Attachment 184960
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/16159019
EFL EWS Bot
Comment 4
2013-01-28 02:27:06 PST
Comment on
attachment 184960
[details]
WIP
Attachment 184960
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/16156543
Peter Beverloo (cr-android ews)
Comment 5
2013-01-28 02:32:43 PST
Comment on
attachment 184960
[details]
WIP
Attachment 184960
[details]
did not pass cr-android-ews (chromium-android): Output:
http://queues.webkit.org/results/16153594
Build Bot
Comment 6
2013-01-28 02:35:00 PST
Comment on
attachment 184960
[details]
WIP
Attachment 184960
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/16155554
Build Bot
Comment 7
2013-01-28 02:43:55 PST
Comment on
attachment 184960
[details]
WIP
Attachment 184960
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://queues.webkit.org/results/16155552
Build Bot
Comment 8
2013-01-28 03:06:31 PST
Comment on
attachment 184960
[details]
WIP
Attachment 184960
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/16155555
WebKit Review Bot
Comment 9
2013-01-28 05:05:02 PST
Comment on
attachment 184960
[details]
WIP
Attachment 184960
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/16149651
New failing tests: fast/forms/month/month-appearance-basic.html platform/chromium/fast/forms/suggestion-picker/time-suggestion-picker-appearance-with-scroll-bar.html fast/forms/time/time-appearance-basic.html fast/forms/datetimelocal/datetimelocal-appearance-basic.html fast/forms/week/week-appearance-basic.html
Kent Tamura
Comment 10
2013-01-28 17:03:26 PST
Created
attachment 185110
[details]
WIP 2
Kent Tamura
Comment 11
2013-01-29 01:38:04 PST
Created
attachment 185198
[details]
Patch
Kent Tamura
Comment 12
2013-01-29 01:50:57 PST
P1 because this is a release blocker for Chrome.
Kent Tamura
Comment 13
2013-01-29 02:36:21 PST
Created
attachment 185207
[details]
Patch 2
Kentaro Hara
Comment 14
2013-01-29 03:19:37 PST
morrita-san: would you take a look?
Kent Tamura
Comment 15
2013-01-29 04:32:46 PST
Keishi, can you do informal review?
Hajime Morrita
Comment 16
2013-01-29 16:18:14 PST
Comment on
attachment 185207
[details]
Patch 2 View in context:
https://bugs.webkit.org/attachment.cgi?id=185207&action=review
> Source/WebCore/html/HTMLInputElement.cpp:1981 > + RefPtr<RenderStyle> style = RenderStyle::clone(originalStyle.get());
We could get rid of this cloning if the style's direction and locale's direction is the same (in most cases it is I guess.)
Kent Tamura
Comment 17
2013-01-29 17:37:33 PST
Comment on
attachment 185207
[details]
Patch 2 View in context:
https://bugs.webkit.org/attachment.cgi?id=185207&action=review
>> Source/WebCore/html/HTMLInputElement.cpp:1981 >> + RefPtr<RenderStyle> style = RenderStyle::clone(originalStyle.get()); > > We could get rid of this cloning if the style's direction and locale's direction is the same (in most cases it is I guess.)
That's right. I'll change so.
Kent Tamura
Comment 18
2013-01-29 18:06:57 PST
Committed
r141195
: <
http://trac.webkit.org/changeset/141195
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug